--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 name: Build and Push Docker Image
 
 on:
-  push:
+  pull_request:
     branches: [ "main" ] # Runs every time you push to main
 
 jobs:
