--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=docker
+      - NODE_ENV=production
     networks:
       - app-network
 
@@ -15,7 +15,7 @@ services:
     ports:
       - "4000:4000"
     environment:
-      - NODE_ENV=docker
+      - NODE_ENV=production
     networks:
       - app-network
 
